k8s/clickhouseSink-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse-sink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clickhouse-sink
  template:
    metadata:
      labels:
        app: clickhouse-sink
    spec:
      containers:
        - name: clickhouse-sink
          image: 100.0.0.2:30099/library/clickhousesink:latest
          #imagePullPolicy: Always
          ports:
            - containerPort: 8062
      imagePullSecrets:
        - name: regcred   
---
apiVersion: v1
kind: Service
metadata:
  name: clickhouse-sink
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8062
      #nodePort: 30000
  selector:
    app: clickhouse-sink
