k8s/opcuaServerNodePort-deployment.yml
# Allows Connection from Opcua-Client from Windows-PC (f.e. UAExpert), Address: opc.tcp://100.0.0.2:30003/UA/MyLittleServer
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-opcua-server-np
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-opcua-server-np
  template:
    metadata:
      labels:
        app: node-opcua-server-np
    spec:
      containers:
        - name: node-opcua-server
          image: 100.0.0.2:30099/library/mylittleopcua:latest
          #imagePullPolicy: Always
          ports:
            - containerPort: 30003 
      imagePullSecrets:        
        - name: regcred   
---
apiVersion: v1
kind: Service
metadata:
  name: node-opcua-server-np
spec:
  type: NodePort
  ports:
    - port: 30003
      targetPort: 30003
      nodePort: 30003
  selector:
    app: node-opcua-server-np
