k8s/ingress-resource-clicksink.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clicksink-ingress
  annotations:     
   # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "clicksink.mariusdev.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: clickhouse-sink 
            port:
              number: 80
