k8s/ingress-resource-kafdrop.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop-ingress
  annotations:     
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "kafdrop.mariusdev.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: ktool-kafdrop
            port:
              number: 9000
