k8s/ingress-resource-prometheus.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:     
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "prometheus.mariusdev.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 8080
