k8s/ingress-resource-scdf.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scdf-ingress
  namespace: scdf
  annotations:     
   # nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "scdf.mariusdev.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: scdf-server
            port:
              number: 80
