k8s/ingress-resource2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  rules:
  - host: marius.demo
    http:
      paths:
      - path: /
        backend:
          service:
            serviceName: kafka-demo-consumer
            servicePort: 80
