k8s/ingress-resource3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "m.mytest.com"
    http:
      paths:
      - path: "/hallo"
        pathType: Prefix
        backend:
          service:
            name: kafka-demo-consumer
            port:
              number: 80
  - host: "producer.mytest.com"
    http:
      paths:
      - path: "/hallo"
        pathType: Prefix
        backend:
          service:
            name: kafka-demo-producer
            port:
              number: 80
