k8s/ingress-ressource-grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:     
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "grafana.mariusdev.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
