k8s/ingress-ressource-kubernetes_dashboard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetesdashboard-ingress
  annotations:     
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: "kubernetesdashboard.mariusdev.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 8443
